# mobile

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  apns-full-conf.xml  mobile.pc.in
cmake/: FindMxml.cmake
example/: example.c
res/: apn.conf  apns-full-conf.xml
src/: abnormal.c  abnormal.h  apnconf.c  apnconf.h  mobile.c  mobile.h  usbdevice.c  usbdevice.h
src/ATChannel/: 4Gmodule_paras.c  4Gmodule_paras.h  atchannel.c  atchannel.h  atcommand.c  atcommand.h  atconfigure.c  atconfigure.h  cmdhandle.h
src/ATChannel/ME909s/: common.h  me909s_basic.h  me909s_command_cme_error.h  me909s_command_cpin.h  me909s_command_eCall.h  me909s_command_indentification.h  me909s_command_ipcfl.h  me909s_command_ledctrl.h  me909s_command_monsc.h  me909s_command_network.h  me909s_command_operator.h  me909s_command_reset.h  me909s_command_signal.h  me909s_command_simswitch.h  me909s_command_syscfgex.h  me909s_command_sysinfoex.h  me909s_command_unconnect.h  me909s_command_urc_hcsq.h  me909s_command_urc_simst.h  me909s_command_urc_srvst.h  me909s_command_urc_sysstart.h  me909s_common_types.h
src/ATChannel/communication/: serial.c  serial.h
src/ATChannel/structure/: commu_queue.c  commu_queue.h
src/Dial/: PPPDmodule_paras.c  PPPDmodule_paras.h  args.c  args.h  dial.c  dial.h
src/Dial/pppd/: args.c  args.h  pppd.c  pppd.h
